css/style.css
/* Index */
@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');

:root {
    --bg: white;
    --bg-secondary: #f8f8f8;
    --bg-tertiary: #0c0c0c;
    --headings: black;
    --text: black;
    --text-secondary: black;
    --links: purple;
}

html, body {
    background-repeat: no-repeat;
    background-position-x: center;
    height:100%;
    width: 100%;
}

body {
    background-color: var(--bg);
    color: var(--text);
}

html[data-theme="dark"] {
    --bg: rgb(0, 35, 63);
    --bg-secondary: rgb(83, 101, 131);
    --bg-tertiary: white;
    --headings: #bee0ff;
    --text: white;
    --text-secondary: white;
    --links: pink; 
}

#content-grid {
    font-size: xx-large;
}

#content-grid h1 {
    color: var(--headings);
}

.index-content {
    background-color: var(--bg-secondary);
    color: var(--text-secondary);
}

#main-wrapper {
    min-height:100%;
    width:100%;
}

#header-container {
    background-color: var(--bg);
    color: var(--text);
}

#header {
    font-size: 500%;
    font-weight: bold;
    color: var(--text);
}

.navbar {
    background-color: var(--bg);
    color: var(--text);
}

.navbar-nav .nav-link {
    color: var(--text) !important;
}

.navbar .navbar-collapse > ul {
    text-align: center;
}

.navbar .navbar-collapse > label {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 2% 0;
}

.hamburger i {
    color: var(--text);
    font-size: 150%;
}

#dark-mode-button {
    float: right;
}

#quote-segment {
    margin-top: 5%;
}

.changeButtonHTML { 
    cursor: pointer; 
    border: 1px solid #555; 
    border-radius: 40%; 
    width: 20px; 
    text-align: center; 
    padding: 5px; 
    margin-left: 8px; 
} 

.dark2 {
    background-color: var(--bg-secondary) !important;
    color: var(--text) !important;
} 

.darkTest {
    background-image: url("/images/giphy.gif") !important;
    background-repeat: no-repeat !important;
    background-size: cover !important;
}

/* Use for formatting carousel */
#carouselContainer{
    height: 30%;
    opacity: 0.3;
}

/* Team */
@media screen and (max-width: 600px) {
    .card {
        min-width: 50%;
    }
}

.image {
    height: 300px;
    overflow: hidden;
}

.image img {
    min-height: 300px;
}

/* Contact */

.contact-information{
    margin-left: auto;
    margin-right: auto;
    font-size: 200%;
}

/* Resource */
.resource-image {
    width: 400px;
    height: auto;
}

/* Footer */
.card.footer {
    color: var(--text);
    background-color: var(--bg);
}

/* Theme toggler */
.toggle-checkbox {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
}
  
.toggle-slot {
    height: 2.5em;
    width: 4em;
    border: 5px solid #e4e7ec;
    border-radius: 10em;
    background-color: white;
    box-shadow: 0px 10px 25px #e4e7ec;
    transition: background-color 250ms;
}
  
.toggle-checkbox:checked ~ .toggle-slot {
    background-color: #374151;
}
  
.toggle-button {
    transform: translate(1.8em, 0.2em);
    position: absolute;
    height: 1.5em;
    width: 1.5em;
    border-radius: 50%;
    background-color: #ffeccf;
    box-shadow: inset 0px 0px 0px 0.30em #ffbb52;
    transition: background-color 250ms, border-color 250ms, transform 500ms cubic-bezier(.26,2,.46,.71);
}
  
.toggle-checkbox:checked ~ .toggle-slot .toggle-button {
    background-color: #485367;
    box-shadow: inset 0px 0px 0px 0.30em white;
    transform: translate(0.3em, 0.2em);
}
  
.sun-icon {
    position: absolute;
    height: 1.5em;
    width: 1.5em;
    color: #ffbb52;
}
  
.sun-icon-wrapper {
    position: absolute;
    height: 1.2em;
    width: 1.2em;
    opacity: 1;
    transform: translate(0.3em, 0.2em) rotate(15deg);
    transform-origin: 50% 50%;
    transition: opacity 150ms, transform 500ms cubic-bezier(.26,2,.46,.71);
}
  
.toggle-checkbox:checked ~ .toggle-slot .sun-icon-wrapper {
    opacity: 0;
    transform: translate(3em, 2em) rotate(0deg);
}
  
.moon-icon {
    position: absolute;
    height: 1.5em;
    width: 1.5em;
    color: white;
}
  
.moon-icon-wrapper {
    position: absolute;
    height: 1.2em;
    width: 1.2em;
    opacity: 0;
    transform: translate(0.3em, 0.3em) rotate(0deg);
    transform-origin: 50% 50%;
    transition: opacity 150ms, transform 500ms cubic-bezier(.26,2.5,.46,.71);
}
  
.toggle-checkbox:checked ~ .toggle-slot .moon-icon-wrapper {
    opacity: 1;
    transform: translate(1.6em, 0em) rotate(-15deg);
}
/* End theme toggler */

